# camelot

./: .gitignore  .gitmodules  .travis.yml  README.md  README.org
doc/: README.md
doc/presentation/: CMakeLists.txt  README.md  beamerthemeCockrell.sty  presentation.aux  presentation.bcf  presentation.nav  presentation.out  presentation.run.xml  presentation.snm  presentation.tex  presentation.toc
doc/presentation/figs/: chandy.pml  szymanski.pml  tokenring.pml
doc/report/: CMakeLists.txt  README.org  README.rst  outline.org  report.dvi  report.tex  research.bib
src/: CMakeLists.txt  README.md  README.org  lamport.pml  tokenring.pml
src/chandy/: CMakeLists.txt  README.md
src/chandy/spec/: CMakeLists.txt  chandy.pml  pan  pan.b  pan.c  pan.h  pan.m  pan.t
src/chandy/test/: channelcheck.pml  processcheck.pml
src/lamport/: CMakeLists.txt  README.md  lamport.pseudo
src/lamport/spec/: CMakeLists.txt  lamport.pml
src/lamport/test/: liveness1.pml  liveness2.pml
src/philosophers/: README.md
src/philosophers/spec/: CMakeLists.txt  philosophers.pml
src/szymanski/lib/: commons.pml  ltls.pml
src/szymanski/spec/: CMakeLists.txt  szymanski.pml  tolerant_szymanski.pml
src/szymanski/test/: liveness0.pml  liveness1.pml
src/tokenring/: README.md
src/tokenring/spec/: CMakeLists.txt  tokenring.pml
src/tolerant_szymanski/spec/: CMakeLists.txt  tolerant_szymanski.pml
src/tolerant_szymanski/test/: liveness0.pml  safety.pml
